--- a/template/upload.html
+++ b/template/upload.html
@@ -1,7 +1,7 @@
 <!--
-   login.html
+   upload.html
 
-   Copyright 2013 Gerry <gerry@gerry-ubuntu-laptop>
+   Copyright 2013 Gerry <gerry@gerry-work-tcl>
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -21,21 +21,16 @@
 
 -->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
 
 <head>
-    <title>Login</title>
-    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <meta name="generator" content="Geany 1.22" />
+    <title>Upload Files</title>
 </head>
 
 <body>
-    <form action="" method="post">
-        <input type="text" name="username" /> <br />
-        <input type="password" name="password" /> <br />
-        <input type="submit" value="Login" />
+    <form action="/upload" enctype="multipart/form-data" method="post">
+	<input type="file" name="pic_uploaded" />
+	<input type="submit" value="Upload" />
     </form>
 </body>
 
