add image upload and resize function

--- a/template/upload.html
+++ b/template/upload.html
@@ -28,9 +28,9 @@
 </head>
 
 <body>
-    <form action="/upload" enctype="multipart/form-data" method="post">
-	<input type="file" name="pic_uploaded" />
-	<input type="submit" value="Upload" />
+    <form enctype="multipart/form-data" method="post">
+    <input type="file" name="pic_uploaded" />
+    <input type="submit" value="Upload" />
     </form>
 </body>
 
