--- a/template/main.html
+++ b/template/main.html
@@ -22,19 +22,22 @@
 -->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
 <head>
-	<title>Home Page</title>
-	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-	<meta name="generator" content="Geany 0.21" />
+    <title>Home Page</title>
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+    <meta name="generator" content="Geany 0.21" />
 </head>
 
 <body>
     <a href="logout">Logout</a>
     <h3>Welcome back, {{ current_user }}</h3>
-    <img src="{{ static_url("images/logo.jpg") }}">
+    <img src="{{ static_url("images/logo.jpg") }}"><br />
+    {% for image in images %}
+    <img width=300 height=250 src="{{ '/images/%s' % image }}" />
+    {% end %}
 
 </body>
 
