store images in local file system.

--- a/template/main.html
+++ b/template/main.html
@@ -35,6 +35,7 @@
     <a href="logout">Logout</a>
     <h3>Welcome back, {{ current_user }}</h3>
     <img src="{{ static_url("images/logo.jpg") }}"><br />
+    <img src="{{ static_url("20130729071109047699-5bd3194e326d406d668f8f0c8d661583.jpg") }}"><br />
     {% for image in images %}
     </p>
 	<a href="{{ '/images/%s?size=medium' % image }}">
